完成遍历省市县三级列表的功能。

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.sun.coolweather">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
+
     <application
         android:name="org.litepal.LitePalApplication"
         android:allowBackup="true"
